--- a/assets/css/unify-core.css
+++ b/assets/css/unify-core.css
@@ -67,20 +67,20 @@ h1, h2, h3, h4, h5, h6 {
 ------------------------------------*/
 ::-moz-selection {
   color: #fff;
-  background-color: #72c02c;
+  background-color:  #007bff;
 }
 
 ::selection {
   color: #fff;
-  background-color: #72c02c;
+  background-color:  #007bff;
 }
 
 .g-bg-primary ::-moz-selection {
-  color: #72c02c;
+  color: #007bff;
   background-color: #fff;
 }
 
 .g-bg-primary ::selection {
-  color: #72c02c;
+  color:  #007bff;
   background-color: #fff;
 }
