modficação do tema geral

--- a/assets/css/unify-globals.css
+++ b/assets/css/unify-globals.css
@@ -329,7 +329,7 @@
 
 /* Primary Colors */
 .g-bg-primary {
-  background-color: #72c02c !important;
+  background-color: #007bff!important;
 }
 
 .g-bg-primary--hover:hover {
