--- a/assets/css/unify-components.css
+++ b/assets/css/unify-components.css
@@ -4689,19 +4689,19 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
 
 /* Outline Button Primary */
 .u-btn-outline-primary {
-  color: #72c02c;
-  border-color: #72c02c;
+  color: #007bff;
+  border-color: #007bff;
   background-color: transparent;
 }
 
 .u-btn-outline-primary:focus, .u-btn-outline-primary.active {
   color: #fff;
-  background-color: #72c02c;
+  background-color: #007bff;
 }
 
 .u-btn-outline-primary:hover {
   color: #fff;
-  background-color: #72c02c;
+  background-color: #007bff;
 }
 
 .u-btn-outline-primary.u-btn-hover-v1-1 {
@@ -4709,7 +4709,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
 }
 
 .u-btn-outline-primary.u-btn-hover-v1-1::after, .u-btn-outline-primary.u-btn-hover-v1-1:hover::after {
-  background-color: #7fd135;
+  background-color: #007bff;
 }
 
 .u-btn-outline-primary.u-btn-hover-v1-1:hover {
@@ -4722,7 +4722,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
 }
 
 .u-btn-outline-primary.u-btn-hover-v1-2::after, .u-btn-outline-primary.u-btn-hover-v1-2:hover::after {
-  background-color: #7fd135;
+  background-color: #007bff;
 }
 
 .u-btn-outline-primary.u-btn-hover-v1-2:hover {
@@ -4735,7 +4735,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
 }
 
 .u-btn-outline-primary.u-btn-hover-v1-3::after, .u-btn-outline-primary.u-btn-hover-v1-3:hover::after {
-  background-color: #7fd135;
+  background-color: #007bff;
 }
 
 .u-btn-outline-primary.u-btn-hover-v1-3:hover {
@@ -4748,7 +4748,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
 }
 
 .u-btn-outline-primary.u-btn-hover-v1-4::after, .u-btn-outline-primary.u-btn-hover-v1-4:hover::after {
-  background-color: #7fd135;
+  background-color: #007bff;
 }
 
 .u-btn-outline-primary.u-btn-hover-v1-4:hover {
@@ -4761,7 +4761,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
 }
 
 .u-btn-outline-primary.u-btn-hover-v2-1::after, .u-btn-outline-primary.u-btn-hover-v2-1:hover::after {
-  background-color: #7fd135;
+  background-color: #007bff;
 }
 
 .u-btn-outline-primary.u-btn-hover-v2-1:hover {
@@ -4787,7 +4787,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
 }
 
 .u-btn-outline-primary.u-btn-hover-v3-1::after, .u-btn-outline-primary.u-btn-hover-v3-1:hover::after {
-  background-color: #7fd135;
+  background-color: #007bff;
 }
 
 .u-btn-outline-primary.u-btn-hover-v3-1:hover {
@@ -25740,24 +25740,24 @@ img.u-block-hover__main--magnifier-top-left {
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
-  background-color: #72c02c;
-  border-color: #72c02c;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 .btn-primary:active, .btn-primary.active,
 .show > .btn-primary.dropdown-toggle {
-  background-color: #6db82a;
-  border-color: #6db82a;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 .btn-outline-primary {
-  color: #72c02c;
-  border-color: #72c02c;
+  color: #007bff;
+  border-color: #007bff;
 }
 
 .btn-outline-primary:hover {
-  background-color: #6db82a;
-  border-color: #6db82a;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -25765,13 +25765,13 @@ img.u-block-hover__main--magnifier-top-left {
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #72c02c;
+  color: #007bff;
 }
 
 .btn-outline-primary:active, .btn-outline-primary.active,
 .show > .btn-outline-primary.dropdown-toggle {
-  background-color: #6db82a;
-  border-color: #6db82a;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 .card,
